Move JWT authentication into websocket
